 * Modified test_server.py to test new functions.

2014-02-06 Seung Yi

 * Modified the send-post-request to send multipart/form-data by adding a file parameter.
 * form works with both multipart/form-data and application/x-www-form-urlencoded
 * submission.
 * Tweaked handle_connection so that recv(1000) to be used with an arbitrary size
 * instead of 1000.
 * handle_connection uses HTML and templates instead of directly sending responses.

2014-02-13 Seung Yi

 * Seperated server.py into two files, app.py and server.py
 * WSGI app added and appropriate templates

2014-02-25 Seung Yi

 * The app servers files and images now.
 * WSGIRef validator used to evaluate the WSGI app

2014-03-20 Seung Yi

 * Changed the server.py to work with command line arguments.
 * Added twill test for Myapp.
 * Swiped a css template from oswd.org and integrated it into imageapp.
 
2014-03-27 Seung Yi

 * chat app and quotes app are integrated into myapp. 
   To run those apps, type : python2.7 server.py -A chat 
                          or python2.7 server.py -A quotes
 
 * Added a thumbnail page on the dafault page(myapp).
   The page shows all the images in thumbnails. 

2014-04-02 Seung Yi

 * Imageapp is buggy; problem with displaying the latest image
 * Tried to fix it but could not find where this is coming from
 * Tried copying and pasting other students' imageapp to see if
   the problem still remains.
 * Looks like the problem does not go away even after I copy and paste
   someone's entire imageapp.
 * Metadata to pictures to add image name and description
 * Search by the name or description
 * HW10 is... not... done... got an exam tomorrow for another class
 * Time is running out and I'm in panic mode

2014-04-10 Seung Yi

 * Cookieapp added. Run the app by typing -A cookie
 * Imageapp stores images in a SQL database named 'images.sqlites'
 * image name and description is stored
 * image search function is now broken..(will have to learn some more SQL)